# py-autowire

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
autowire/: autowire.py  cache.py  injectable.py
pyautowire/: __init__.py  autowire.py  cache.py  error.py  injectable.py
test/: conftest.py  some_class.py  test_alias.py  test_exceptions.py  test_overwrite_kwargs.py  test_refresh.py  test_register.py  test_registration.py
