[tool.poetry]
name = "pyautowire"
version = "0.2.0"
description = "Good enough autowiring for Python"
authors = ["Tobias Waslowski <tobias.waslowski@gmail.com>"]
license = "gpl3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
kink = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
